--- a/DeepLinking/Info.plist
+++ b/DeepLinking/Info.plist
@@ -14,6 +14,16 @@
 				<string>alinking</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>DeepLink SwiftUI</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>deeplink</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
